<resources>
    <string name="app_name">Quiz App</string>
    <string name="hello_name">Hello name</string>
    <string name="which_thing_is_alive">Which thing is alive?</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="next">Next</string>
    <string name="congratulations">Congratulations</string>
    <string name="your_score_is">Your Score is</string>
    <string name="score">score</string>
    <string name="take_another_quiz">Take another quiz</string>
    <string name="finish">Finish</string>
</resources>