<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.quizapp.QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textViewname"
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/hello_name"
            android:textSize="22sp" />

        <ProgressBar
            android:id="@+id/simpleProgressBar"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:max="100"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:progress="0"/>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/which_thing_is_alive"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:padding="8dp"
        android:layout_marginBottom="40dp"
        android:id="@+id/question"/>


    <Button
        android:id="@+id/choice1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginBottom="24dp"
        android:padding="8dp"
        android:text="@string/option_1"
        android:textColor="#000000" />

    <Button
        android:id="@+id/choice2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginBottom="24dp"
        android:padding="8dp"
        android:text="@string/option_2"
        android:textColor="#000000" />

    <Button
        android:id="@+id/choice3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:padding="8dp"
        android:text="@string/option_3"
        android:textColor="#000000" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="center"
        android:background="#B71C1C"
        android:textColor="#fff"
        android:padding="8dp"
        android:layout_marginBottom="24dp"
        android:id="@+id/next"/>

</LinearLayout>
